--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Colorprimario">#200049</color>
+    <color name="Colorsecundario">#2ec7d5</color>
+    <color name="Colorterciario">#ff2e72</color>
 </resources>
